# OpenDocument.py

./: CMakeLists.txt  README.md  conanfile.txt  pyproject.toml  setup.py
.github/config/ubuntu-22.04/conan/profiles/: default
.github/workflows/: format.yaml  pip.yaml  wheels.yaml
src/cpp/: CMakeLists.txt  CMakeUserPresets.json  pyodr.cpp
src/pyodr/: CMakeLists.txt  cli.py  core.cpp
tests/: test_foobar.py
